--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,12 +3,13 @@ spring:
     show-sql: true
     hibernate:
       ddl-auto: create-drop
+    database: mysql
   datasource:
     platform: mysql
-    url: jdbc:mysql://localhost:3306/pet_assistant
+    url: jdbc:mysql://localhost:3306/pet_assistant?serverTimezone=UTC
     username: petassistant
     password: petassistant
-    driver-class-name: com.mysql.jdbc.Driver
+    driverClassName: com.mysql.jdbc.Driver
   mail:
     host: smtp.gmail.com
     port: 587
