--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,6 +11,8 @@ spring:
     username: be951e7d1607c2
     password: 9c1d1edd
     driverClassName: com.mysql.jdbc.Driver
+    hikari:
+      maximum-pool-size: 8
   mail:
     host: smtp.gmail.com
     port: 587
