--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,6 +22,8 @@ spring:
             enable: true
             required: true
           auth: true
+          ssl:
+            trust: smtp.gmail.com
 jwt:
   token:
     secret: secret
